fixed conflict, +new older code

--- a/index.html
+++ b/index.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sirela-Gartanen</title>
-    <!-- Font Awesome =========================================== -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-<<<<<<< HEAD
-    <h1>The Beasts</h1>
-    <!--evans RETURNING-->
-=======
->>>>>>> b0e953c2ec4b5c050c3feef6b6e8d0cb943c8621
-    <!-- **********JOHANNA*********** -->
-    <section>
-      <div class="fox-image">
-        <div class="text-box1">
-          <p>
-            We think big. We are fearless. We stand up and fight for all animals
-            who are suffering.
-          </p>
-          <p>
-            <a href="#" class="text-box1-link"
-              ><strong>Our big fights</strong> <i class="fas fa-arrow-right"></i
-            ></a>
-          </p>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Sirela-Gartanen</title>
+  <!-- Font Awesome =========================================== -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body>
+  <h1>The Beasts</h1>
+  <!--evans RETURNING-->
+  <!-- **********JOHANNA*********** -->
+  <section>
+    <div class="fox-image">
+      <div class="text-box1">
+        <p>
+          We think big. We are fearless. We stand up and fight for all animals
+          who are suffering.
+        </p>
+        <p>
+          <a href="#" class="text-box1-link"><strong>Our big fights</strong> <i class="fas fa-arrow-right"></i></a>
+        </p>
       </div>
     </div>
 
@@ -47,7 +38,9 @@
           <span style="background-color: #FFCD03">Together</span>, we can
           create a more humane society.
         </p>
-        <a href="#" class="text-box2-link"><strong>How you can help </strong><i class="fas fa-arrow-right"></i></a>
+        <div class="box2-link">
+          <a href="#" class="text-box2-link"><strong>How you can help </strong><i class="fas fa-arrow-right"></i></a>
+        </div>
       </div>
     </div>
     <div class="kitty-and-puppy">
@@ -56,110 +49,75 @@
           <h3>PASS A LAW</h3>
           <p>
             The Preventing Animal Cruelty and Torture Act (PACT Act) will make
-            it a federal crime to commit malicious cruelty an animal on
+            it a federal crime to commit malicious cruelty to an animal on
             federal property or in interstate commerce.
           </p>
           <label class="kitty-button"><a href="#">Use Your Voice</a></label>
         </div>
       </div>
-      <div class="kitty-and-puppy">
-        <div class="kitty">
-          <div class="text-box-kitty">
-            <h3>PASS A LAW</h3>
-            <p>
-              The Preventing Animal Cruelty and Torture Act (PACT Act) will make
-              it a federal crime to commit malicious cruelty an animal on
-              federal property or in interstate commerce.
-            </p>
-            <label class="kitty-button"><a href="#">Use Your Voice</a></label>
-          </div>
-        </div>
-        <div class="puppy">
-          <div class="text-box-puppy">
-            <h3>PROTECT PETS</h3>
-            <p>
-              The Shelter Ally Project transports homeless pets to our shelter
-              and rescue partners. Support this and other lifesaving efforts.
-            </p>
-            <label class="puppy-button"><a href="#">Give Now</a></label>
-          </div>
+      <div class="puppy">
+        <div class="text-box-puppy">
+          <h3>PROTECT PETS</h3>
+          <p>
+            The Shelter Ally Project transports homeless pets to our shelter
+            and rescue partners. Support this and other lifesaving efforts.
+          </p>
+          <label class="puppy-button"><a href="#">Give Now</a></label>
         </div>
       </div>
-    </section>
-    <!--Johanna ending -->
+    </div>
+  </section>
+  <!--Johanna ending -->
 
-    <!-- DEAN =========================================== -->
-    <section>
-      <div class="container">
-        <p class="changes__text">We drive real, tangible change for animals.</p>
-        <hr />
+  <!-- DEAN =========================================== -->
+  <section>
+    <div class="container">
+      <p class="changes__text">We drive real, tangible change for animals.</p>
+      <hr />
 
-        <div class="changes">
-          <div class="change">
-            <div class="change__top">
-              <img src="./assets/image/hunting.png" alt="cruel to animals" />
-            </a>
+      <div class="changes">
+        <div class="change">
+          <div class="change__top">
+            <img src="./assets/image/hunting.png" alt="cruel to animals" />
           </div>
           <div class="change__body">
-            <div class="change__body__content change__item1">
-              <a href="#">Undercover investigation exposes grisly cruelty at Oregon
-                wildlife killing contest; lawmakers move to ban such events in
-                the state</a>
-            </div>
-
-            <div class="change__bottom">
-              <p>"A Human Wold" blog</p>
-              <div id="change__btn">
-                <a href="#"><i class="fas fa-arrow-right"></i></a>
-              </div>
-            </div>
+            <a href="#">Undercover investigation exposes grisly cruelty at Oregon
+              wildlife killing contest; lawmakers move to ban such events in
+              the state</a>
           </div>
-
-
+          <div class="change__bottom">
+            <p>"A Human Wold" blog</p>
+          </div>
+          <a href="#"><i class="fas fa-arrow-right"></i></a>
         </div>
         <!-- change -->
 
         <div class="change">
           <div class="change__top">
-            <a href="#">
-              <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
-            </a>
+            <img src="./assets/image/girlAndDog.png" alt="girl and dog" />
           </div>
           <div class="change__body">
-            <div class="change__body__content change__item2">
-              <a href="#">The Humane Society of the United States makes new leadership
-                appointments and important governance changes</a>
-            </div>
-            <div class="change__bottom">
-              <p>Press release</p>
-              <div id="change__btn">
-                <a href="#"><i class="fas fa-arrow-right"></i></a>
-              </div>
-            </div>
+            <a href="#">The Humane Society of the United States makes new leadership
+              appointments and important governance changes</a>
           </div>
-          
+          <div class="change__bottom">
+            <p>Press release</p>
+          </div>
+          <a href="#"><i class="fas fa-arrow-right"></i></a>
         </div>
         <!-- change -->
 
-        <div class="change change__special">
+        <div class="change">
           <div class="change__top">
-            <a href="#">
-              <img src="./assets/image/2018.png" alt="2018 calendar" />
-            </a>
+            <img src="./assets/image/2018.png" alt="2018 calendar" />
           </div>
-
           <div class="change__body">
-            <div class="change__body__content change__item3">
-              <a href="#">A big year for animals</a>
-            </div>
-
-            <div class="change__bottom">
-              <p><em>All Animals</em> magazine</p>
-              <div id="change__btn">
-                <a href="#"><i class="fas fa-arrow-right"></i></a>
-              </div>
-            </div>
+            <a href="#">A big year for animals</a>
           </div>
+          <div class="change__bottom">
+            <p><em>All Animals</em> magazine</p>
+          </div>
+          <a href="#"><i class="fas fa-arrow-right"></i></a>
         </div>
         <!-- change -->
       </div>
