--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sirela-Gartanen</title>
-    <!-- Google Fonts =========================================== -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700,900"
-      rel="stylesheet"
-    />
 
-    <!-- Font Awesome =========================================== -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Sirela-Gartanen</title>
+  <!-- Google Fonts =========================================== -->
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700,900" rel="stylesheet" />
 
-  <body>
-    <h1>The Beasts</h1>
+  <!-- Font Awesome =========================================== -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-    <!-- **********JOHANNA*********** -->
-    <section>
-      <div class="fox-image">
-        <div class="text-box1">
-          <p>
-            We think big. We are fearless. We stand up and fight for all animals
-            who are suffering.
-          </p>
-          <p>
-            <a href="#" class="text-box1-link"
-              >Our big fights <i class="fas fa-arrow-right"></i
-            ></a>
-          </p>
-        </div>
+<body>
+  <h1>The Beasts</h1>
+
+  <!-- **********JOHANNA*********** -->
+  <section>
+    <div class="fox-image">
+      <div class="text-box1">
+        <p>
+          We think big. We are fearless. We stand up and fight for all animals
+          who are suffering.
+        </p>
+        <p>
+          <a href="#" class="text-box1-link">Our big fights <i class="fas fa-arrow-right"></i></a>
+        </p>
       </div>
+    </div>
     </div>
 
     <div class="how-you-can-help">
@@ -74,9 +66,7 @@
               it a federal crime to commit malicious cruelty an animal on
               federal property or in interstate commerce.
             </p>
-            <label class="kitty-button"
-              ><a href="#"><strong>Use Your Voice</strong></a></label
-            >
+            <label class="kitty-button"><a href="#"><strong>Use Your Voice</strong></a></label>
           </div>
         </div>
         <div class="puppy">
@@ -86,24 +76,22 @@
               The Shelter Ally Project transports homeless pets to our shelter
               and rescue partners. Support this and other lifesaving efforts.
             </p>
-            <label class="puppy-button"
-              ><a href="#"><strong>Give Now</strong></a></label
-            >
+            <label class="puppy-button"><a href="#"><strong>Give Now</strong></a></label>
           </div>
         </div>
       </div>
-    </section>
-    <!--Johanna ending -->
-    <!-- DEAN =========================================== -->
-    <section>
-      <div class="container">
-        <p class="changes__text">We drive real, tangible change for animals.</p>
-        <hr />
+  </section>
+  <!--Johanna ending -->
+  <!-- DEAN =========================================== -->
+  <section>
+    <div class="container">
+      <p class="changes__text">We drive real, tangible change for animals.</p>
+      <hr />
 
-        <div class="changes">
-          <div class="change">
-            <div class="change__top">
-              <img src="./assets/image/hunting.png" alt="cruel to animals" />
+      <div class="changes">
+        <div class="change">
+          <div class="change__top">
+            <img src="./assets/image/hunting.png" alt="cruel to animals" />
             </a>
           </div>
           <div class="change__body">
@@ -143,7 +131,7 @@
               </div>
             </div>
           </div>
-          
+
         </div>
         <!-- change -->
 
