finally deleted background-color from text-box2

--- a/index.html
+++ b/index.html
@@ -289,11 +289,9 @@
             <!-- news__title -->
             <div>
               <p class="news__body">
-                <em
-                  >Our undercover investigation reveals the gruesome killing of
-                  coyotes in Oregon for cash and prizes. Prevent this cruelty
-                  from happening in your state!</em
-                >
+                Our undercover investigation reveals the gruesome killing of
+                coyotes in Oregon for cash and prizes. Prevent this cruelty from
+                happening in your state!
               </p>
             </div>
             <!-- news__body -->
