handling develop conflicts

--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
   <body>
 
     
-   <!--  <footer class="grid"> 
-      <section class="footer-top">
-        <section class="ft-left"></section>
-        <section class="ft-right"></section>
-      </section>
-      <section class="footer-btm"> 
-        <section class="ft-left"></section>
-        <section class="ft-right"></section>
-      </section>
-    </footer> -->
-  
+
+
+
+
+    <!--Evans's footer-->
       <footer class="grid"> 
         <section class="footer-top">
           <section class="ft-left"> 
